main/default/objects/Assignment_Matrix__c/Assignment_Matrix__c.object-meta.xml
<CustomObject>
    <label>Assignment Matrix</label>
    <nameField>
        <displayFormat>AM-{0000}</displayFormat>
        <label>Assignment Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>