main/default/objects/Assignment_Matrix__c/fields/Assignment_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Object_Type__c</fullName>
    <label>Assignment Object Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>