main/default/objects/Assignment_Matrix__c/fields/Document_Template__c.field-meta.xml
<CustomField>
    <fullName>Document_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Assignment Matrices</relationshipLabel>
    <relationshipName>Assignment_Matrices</relationshipName>
    <type>Lookup</type>
</CustomField>