main/default/objects/Assignment_Matrix__c/fields/Lookup_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field_API_Name__c</fullName>
    <description>The lookup field to be used for current assignment</description>
    <label>Assignment Lookup Field API Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document_Template__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>