main/default/objects/Assignment_Matrix__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Professional Indemnity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>